--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,1 +1,12 @@
-/* Put your CSS here */
+
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+canvas {
+  background: rgba(202, 22, 16, 0.692);
+     display: block;
+    margin: 0 auto;
+}
