--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -25,20 +25,21 @@ html, body {
 }
 
 body {
-    background: rgb(109, 9, 9);
+    background: rgb(114, 0, 0);
     display: flex;
     flex-direction: column;
     font-size: 10px;
 }
 
 a[href="#"] {
+    font-size: 20px;
     text-decoration: none;
 }
 
 .logo-text {
     background: white;
     font-family: lakeshore;
-    font-size: 37px;
+    font-size: 40px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -53,18 +54,20 @@ a[href="#"] {
     flex-direction: column;
 }
 
-.detail-image-container {
-    flex: 1 1 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.is-small {
+    transform: scale(0.001);
+    transition: transform 0ms;
+
 }
 
-.detail-image-frame {
-    position: relative;
+.thumbnail-title {
+    background:	rgba(161, 159, 159, 0.4);
+    color:	black;
+    display: block;
     text-align: center;
-
-    transition: transform 333ms cubic-bezier(1, 0.06, 0.28, 1);
+    font-size: 18px;
+    margin: 0;
+    padding: 0.4em, 1em;
 } 
 
 .detail-image-title {
@@ -112,8 +115,14 @@ a[href="#"] {
     padding: 0.4em 1em;
 }
 
+.image-description {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+}
+
 .detail-image {
-    width: 80%;
+    width: 40%;
 }
 
 .thumbnail-list {
@@ -125,19 +134,7 @@ a[href="#"] {
 
     overflow-x: auto;
     padding: 20px 0;
-    white-space: nowrap;
 } 
-
-
-/* Hide  the detail image by default */
-.hidden-detail .detail-image-container {
-    display: none;
-}
-
-.hidden-detail .thumbnail-list {
-    flex-direction: column;
-    align-items: center;
-}
 
 .hidden-detail .thumbnail-item {
     max-width: 80%
@@ -163,5 +160,25 @@ a[href="#"] {
     /* every item EXCEPT the first */
     .thumbnail-item + .thumbnail-item {
         margin-top: 20px;
+    }
+
+    .description {
+        font-size: 20px;
+    }
+    
+    .description-container {
+        flex: 0 1 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        border: 1px solid rgb(100%, 100%, 100%);
+        border: 1px solid rgba(100%, 100%, 100%, 0.8);
+        margin: 10px 10px 30px 10px;  
+    }
+    
+    .description-frame {
+        position: relative;
+        text-align: center;
     }
 }
